# fluvio-jaq

./: Cargo.toml  Makefile  README.md  SmartModule.toml
.github/workflows/: ci.yaml  publish.yml
examples/: cat.yaml
src/: lib.rs
test-data/: creates-output.json  fruit-input.json  fruit-output.json
